# ha-schedule-manager

./: README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/schedule_manager/: __init__.py  action_executor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  engine.py  manifest.json  models.py  name_sync.py  schedule_devices.py  sensor.py  services.py  services.yaml  storage.py  switch.py
custom_components/schedule_manager/translations/: en.json  fr.json
tests/: test_engine.py  test_models.py  test_name_sync.py
